add routes/product validation
